# spamass-milter

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  ac_acx_pthread.m4  ac_cf_gnu_source.m4  ac_cxx_exceptions.m4  ac_cxx_namespaces.m4  ac_cxx_verbose_terminate_handler.m4  ac_dmalloc.m4  ac_pike_compiler_flag.m4  ac_pike_paths.m4  ac_vl_prog_cc_warnings.m4  acconfig.h  acinclude.m4  autogen.sh  config.h.in  configure.in  daemon.c  mdoc2man.awk  poll.c  rhautogen.sh  spamass-milter.1.in  spamass-milter.cpp  spamass-milter.h  strsep.c  subst_poll.h
contrib/: README.gnus  spamass-milter  spamass-milter-redhat.rc  spamass-milter-suse.rc  spamass-milter.sh  spamass-milter.spec.in  users
